--- a/.gitignore
+++ b/.gitignore
@@ -22928,3 +22928,4 @@ Idle Monster Defense v1.1/Temp/UnityLockfile
 Idle Monster Defense v1.1/Temp/workerlic
 Idle Monster Defense v1.1/Temp/__Backupscenes/0.backup
 Idle Monster Defense v1.1/.vsconfig
+Idle Monster Defense v1.1/Library/ShaderCache/shader/Hidden-Spine-Bones6698/00/3cab05e58e7078db7daedb1d6bd2384c.bin
