--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Idle Monster Defense v1.1/Temp/FSTimeGet-8f004b97a52af214096eb214896f229a
+Idle Monster Defense v1.1/Temp/FSTimeGet-956175d7c308fff4aa2b31ce41e3c748
+Idle Monster Defense v1.1/Temp/FSTimeGet-eff7cc13011147d4789821b8f6db6f93
+Idle Monster Defense v1.1/Temp/UnityLockfile
