--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,9 @@ Idle Monster Defense v1.1/Temp/FSTimeGet-8f004b97a52af214096eb214896f229a
 Idle Monster Defense v1.1/Temp/FSTimeGet-956175d7c308fff4aa2b31ce41e3c748
 Idle Monster Defense v1.1/Temp/FSTimeGet-eff7cc13011147d4789821b8f6db6f93
 Idle Monster Defense v1.1/Temp/UnityLockfile
+Idle Monster Defense v1.1/Temp/__Backupscenes/0.backup
+Idle Monster Defense v1.1/Temp/FSTimeGet-af053dc9ef257504e8db000273f10250
+Idle Monster Defense v1.1/Temp/FSTimeGet-025e769b9564d8146a832943c2e11eff
+Idle Monster Defense v1.1/Temp/FSTimeGet-c88db547cb14c5648a0bdd5dfff9c6ea
+Idle Monster Defense v1.1/Temp/workerlic
+Idle Monster Defense v1.1/Temp/FSTimeGet-f7721a85f61f28447ac48b5ec40cb815
