--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Idle Monster Defense v1.1/Library
+Idle Monster Defense v1.1/Logs
+Idle Monster Defense v1.1/Logs
